--- a/src/i18n/lv/translation.json
+++ b/src/i18n/lv/translation.json
@@ -13,5 +13,6 @@
   "Users": "Lietotāji",
   "Teams": "Komandas",
   "Admin": "Administrācija",
-  "Home page": "Mājaslapa"
+  "Home page": "Mājaslapa",
+  "Notifications": "Paziņojumi"
 }
