--- a/src/i18n/us/translation.json
+++ b/src/i18n/us/translation.json
@@ -13,5 +13,6 @@
   "Users": "Users",
   "Teams": "Teams",
   "Admin": "Admin",
-  "Home page": "Home page"
+  "Home page": "Home page",
+  "Notifications": "Notifications"
 }
