adjusted layout and theme according to the project

--- a/src/i18n/lv/translation.json
+++ b/src/i18n/lv/translation.json
@@ -14,5 +14,13 @@
   "Teams": "Komandas",
   "Admin": "Administrācija",
   "Home page": "Mājaslapa",
-  "Notifications": "Paziņojumi"
+  "ID": "ID",
+  "Search": "Meklēt",
+  "Reset": "Atiestatīt",
+  "Create": "Izveidot",
+  "Name": "Nosaukums",
+  "Team": "Komanda",
+  "Notifications": "Paziņojumi",
+  "Scoreboard": "Rezultāti",
+  "Play": "Spēlēt"
 }
