--- a/src/i18n/us/translation.json
+++ b/src/i18n/us/translation.json
@@ -14,5 +14,13 @@
   "Teams": "Teams",
   "Admin": "Admin",
   "Home page": "Home page",
-  "Notifications": "Notifications"
+  "ID": "ID",
+  "Search": "Search",
+  "Reset": "Reset",
+  "Create": "Create",
+  "Name": "Name",
+  "Team": "Team",
+  "Notifications": "Notifications",
+  "Scoreboard": "Scoreboard",
+  "Play": "Play"
 }
