added dummy Image admin pages

--- a/src/i18n/lv/translation.json
+++ b/src/i18n/lv/translation.json
@@ -22,5 +22,7 @@
   "Team": "Komanda",
   "Notifications": "Paziņojumi",
   "Scoreboard": "Rezultāti",
-  "Play": "Spēlēt"
+  "Play": "Spēlēt",
+  "Images": "Attēli",
+  "Upload": "Augšupielādēt"
 }
