--- a/src/i18n/us/translation.json
+++ b/src/i18n/us/translation.json
@@ -22,5 +22,7 @@
   "Team": "Team",
   "Notifications": "Notifications",
   "Scoreboard": "Scoreboard",
-  "Play": "Play"
+  "Play": "Play",
+  "Images": "Images",
+  "Upload": "Upload"
 }
