added registration page

--- a/src/i18n/lv/translation.json
+++ b/src/i18n/lv/translation.json
@@ -24,5 +24,8 @@
   "Scoreboard": "Rezultāti",
   "Play": "Spēlēt",
   "Images": "Attēli",
-  "Upload": "Augšupielādēt"
+  "Upload": "Augšupielādēt",
+  "Register": "Reģistrēties",
+  "Repeat password": "Paroles atkārtošana",
+  "Please repeat your password!": "Lūdzu, atkārtojiet jūsu paroli!"
 }
