--- a/src/i18n/us/translation.json
+++ b/src/i18n/us/translation.json
@@ -24,5 +24,8 @@
   "Scoreboard": "Scoreboard",
   "Play": "Play",
   "Images": "Images",
-  "Upload": "Upload"
+  "Upload": "Upload",
+  "Register": "Register",
+  "Repeat password": "Repeat password",
+  "Please repeat your password!": "Please repeat your password!"
 }
